Update: - New endpoint to send local sparql queries - Extend WoT API to allow plain text
